# Hackathon-2023

./: .gitignore
baibaidui/: Cargo.toml  DEPLOY.md  README.md  build.rs
baibaidui/docker/BaseEnv/: build_image.sh
baibaidui/docker/SysNode/: build_image.py
baibaidui/files/: file_map.yaml  node_config.yaml  user.yaml
baibaidui/scripts/: generate_random_file.py
baibaidui/scripts/deploy_cluster/: 1.ansible_setup.py  _gen_each_node_compose.py  ans_redeploy_cluster.yml  node_config.yaml
baibaidui/scripts/install/: _ans_install_build.yml  install_ansible.sh
baibaidui/scripts/saaf/: project_name.py
baibaidui/src/: config.rs  main.rs  sys.rs
chunchunmengxindui/file-sharing/: Cargo.toml  README.md
chunchunmengxindui/file-sharing/fileStorage/: ans.txt  ans_4KB.txt
chunchunmengxindui/file-sharing/src/: main.rs  network.rs
ruan_lao_shi_xiao_fen_dui/: README.md
ruan_lao_shi_xiao_fen_dui/baseline/: Cargo.toml  README.md  single.dump
ruan_lao_shi_xiao_fen_dui/baseline/src/: main.rs
ruan_lao_shi_xiao_fen_dui/deploy/: docker-compose.yaml
ruan_lao_shi_xiao_fen_dui/docs/: p2p-with-tracker.md
ruan_lao_shi_xiao_fen_dui/genfile/: README.md  README_zh.md
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/: Cargo.toml  config.toml  test.sh
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker-client/: Cargo.toml
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/src/: config.rs  constant.rs  lib.rs  main.rs
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/src/server/: error.rs  mod.rs
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/src/server/logic/: file.rs  mod.rs  node.rs  tracker.rs
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/src/server/node/: mod.rs
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/src/server/node/api/: file.rs  info.rs  mod.rs  node.rs
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/src/server/node/client/: file.rs  mod.rs  node.rs  piece.rs  session.rs
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/src/server/node/task/: check.rs
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/src/server/store/: helper.rs  mod.rs  node.rs  piece.rs  session.rs
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/src/server/tracker/api/: cluster.rs  file.rs  info.rs  mod.rs  node.rs
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/src/server/tracker/task/: check.rs
ruan_lao_shi_xiao_fen_dui/p2p-with-tracker/src/server/utils/: mod.rs  s3_helper.rs  time_helper.rs
(+19 files in other folders)
