[package]
name = "baseline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = {version = "0.34.0-rc4"}
tokio = { version = "1.19.2", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }